dropzone file too large fix

--- a/public/scss/product_create.scss
+++ b/public/scss/product_create.scss
@@ -106,6 +106,10 @@ body {
   cursor: default;
 }
 
+.dz-error-message{
+  top: 150px !important;
+}
+
 /** POST BOOK BUTTON **/
 
 .sell-btn {
